nixidy/generated/prod/sonarr/Deployment-sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sonarr
  name: sonarr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: sonarr
      app.kubernetes.io/instance: sonarr
      app.kubernetes.io/name: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: e7345818a2b0e36fe77ef531c61896b4c09c969d9f7e97e8ceb32f136a6ef44b
      labels:
        app.kubernetes.io/controller: sonarr
        app.kubernetes.io/instance: sonarr
        app.kubernetes.io/name: sonarr
    spec:
      automountServiceAccountToken: false
      containers:
        - envFrom:
            - secretRef:
                name: sonarr
            - configMapRef:
                name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.17.2950@sha256:bdc787fe07bb7c0b6af9c030764902f70092ec9a426e52a36716d3a13917fe2d
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          name: sonarr
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media/downloads
              name: media-downloads
            - mountPath: /media/tv
              name: media-tv
            - mountPath: /tmp
              name: tmpfs
              subPath: tmp
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 65534
        runAsUser: 65534
      serviceAccountName: sonarr
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr
        - name: media-downloads
          persistentVolumeClaim:
            claimName: media-downloads
        - name: media-tv
          persistentVolumeClaim:
            claimName: media-tv
        - emptyDir: {}
          name: tmpfs
